<resources>
    <string name="app_name">HangIn</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="welcome_to_hangin">Welcome To HangIn</string>
    <string name="your_email">Your email</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="create_a_new_account">Create a New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_hang_in">Hi there, I\'m using Hang-In</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
</resources>
