<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="46dp"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/need_a_new_account" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="113dp"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="206dp"
        android:layout_height="93dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="177dp"
        android:text="@string/welcome_to_hangin"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="7dp"
        app:srcCompat="@drawable/chat_2_icon" />
</RelativeLayout>