<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/settings_appBar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:text="Display Name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="219dp"
        android:text="@string/hi_there_i_m_using_hang_in"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:background="@android:color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:background="@android:color/holo_red_light"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/settings_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/settings_display_name"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/settings_display_name"
        android:alpha="0.5"
        android:background="@android:color/transparent"
        android:padding="10dp"
        app:srcCompat="@drawable/baseline_edit_black_18dp" />

</RelativeLayout>